# remap_repro

./: .bazelrc  WORKSPACE
src/a_pkg/: BUILD.bazel  foo.java  foo.scala  foo_test.sh  repro.bzl
