load("//src/a_pkg:repro.bzl", "repro")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "foo",
    srcs = ["foo.java"]
)

java_library(
    name = "non_qualified",
    runtime_deps = [":foo"],
)

java_library(
    name = "fully_qualified",
    runtime_deps = ["@a//src/a_pkg:foo"],
)

repro(
    name = "boo",
    deps = [":non_qualified", ":fully_qualified"],
)
