package(default_visibility = ["//visibility:public"])

filegroup(
    name = "foo1",
    srcs = ["bla.txt"],
)

sh_library(
    name = "lib",
    data = [ ":foo1"]
)

sh_library(
    name = "lib2",
    data = [ "@a//src/a_pkg:foo1"]
)

sh_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.sh"],
    deps = [":lib", ":lib2"],
    # deps = [":lib2",":lib"],
)