load(
    "@io_bazel_rules_scala//scala:scala.bzl",
    "scala_library",
)

load("//src/a_pkg:repro.bzl", "repro")

package(default_visibility = ["//visibility:public"])

scala_library(
    name = "foo",
    srcs = ["foo.scala"]
)

scala_library(
    name = "non_qualified",
    deps = [":foo"],
)

scala_library(
    name = "fully_qualified",
    deps = ["@a//src/a_pkg:foo","@com_google_guava_guava"],
)

repro(
    name = "boo",
    deps = [":non_qualified", ":fully_qualified"],
)
